--- a/web/index.html
+++ b/web/index.html
@@ -45,9 +45,10 @@
 	<main id="index">
 		<div class="container">
 			<h5>Artikelen</h5>
-			<p>Hier zie je een lijst van zeer kwalitatieve auto's die je kunt bestellen.</p>
+			<p>een bescheiden aanbod van prachtige auto's, van supercars zelfs tot aan oldtimers. een echt genot voor de klassieke en moderne autoliefhebber. als kers op de taart zijn al deze auto's ook nog eens te koop. geniet ervan!</p>
+			<p>er zit voor alsnog maar 1 elektrische auto tussen, kun jij hem vinden? na verloop van tijd zullen we proberen om wat meer elektrische modellen aan het assortiment toe te voegen, maar wees niet getreurd, er zullen zeker nog op brandstof rijdende brute wagens overblijven in het assortiment.<p>
 			<p>klik op een auto voor meer informatie<p>
-					<p>klik op de "winkelwagentje" om het artikel in je winkelwagen te stoppen</p>
+					<p>klik op het "winkelwagentje" om het artikel in je winkelwagen te stoppen</p>
 		</div>	
     <!-- template for product info-->
   	<template id="productcard">
